@@ -1,3 +1,9 @@
+2010-08-09	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	PR 1661/testing
+	* spfifo02/init.c, spmountmgr01/init.c, spprivenv01/init.c: Eliminate
+	most references to RTEMS_Malloc_Heap.
+
 2010-08-09	Sebastian Huber <sebastian.huber@embedded-brains.de>
 
 	* sp09/screen12.c: Update for rtems_region_create() changes.
